--- a/ksd-base-parent/ksd-system/src/main/resources/application.yml
+++ b/ksd-base-parent/ksd-system/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8099
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/xccmbs?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/authority_managerment?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
     username: root
     password: 960422
     type: com.alibaba.druid.pool.DruidDataSource
