--- a/ksd-base-parent/ksd-system/.gitignore
+++ b/ksd-base-parent/ksd-system/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+ksd-base-parent.iml
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
@@ -30,4 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-workspace.xml
